--- a/views/pages/contacts.hbs
+++ b/views/pages/contacts.hbs
@@ -6,13 +6,8 @@
     <!--Addresses-->
     <section class=" mxW-1400 wz-90 mx-auto">
         <h3 class="subtitle h3Media mb-4 text-center" lang-key="contactDescription">contact DESCRIPTION</h3>
-        <pre lang-key="contactsAddress">
-Address: Osh, Kyrgyzstan
-Besh Kapa Street-101, 14
-Osh postal code – 723500
-Tel: +996555550146
-WhatsApp: +996556356666
-Email: naturetravel.osh@gmail.com
+        <pre style="white-space: pre-line;">
+{{changeLang contacts.contacts}}
         </pre>
         <!--  Partners icon-->
         <div id="partners" >
