--- a/views/pages/motorcycles.hbs
+++ b/views/pages/motorcycles.hbs
@@ -1,113 +1,54 @@
 <main id="motorcycles">
-    <header class="text-light d-flex flex-column justify-content-center">
-        <div class="mxW-1400 wz-90 mx-auto">
-            <h1 class="headline" lang-key="offRoadMotorcyclesPH1">quality and reliability begin with us.</h1>
-            <h2 class="subtitle display-6 text-end" lang-key="offRoadMotorcyclesCarsPH2">feel the extreme!</h2>
-        </div>
-    </header>
+  <header class="text-light d-flex flex-column justify-content-center">
+    <div class="mxW-1400 wz-90 mx-auto">
+      <h1 class="headline" lang-key="offRoadMotorcyclesPH1">quality and
+        reliability begin with us.</h1>
+      <h2
+        class="subtitle display-6 text-end"
+        lang-key="offRoadMotorcyclesCarsPH2"
+      >feel the extreme!</h2>
+    </div>
+  </header>
 
-    <section class="pb-5">
-        <div class="mxW-1400 wz-90 mx-auto pt-2">
-            <h4 class="subtitle text-center my-5" lang-key="offRoadMotorcycles">off-road motorcycles</h4>
-            <!-- first two contents-->
-            <div class="d-flex flex-column flex-lg-row">
-                <!-- first img-->
-                <div class="col-lg-8 align-self-center text-center mb-5">
-                    <img class="rectangle text-center w-75 " src="assets/img/Of-road/motorcycle-1.jpg"
-                         alt="motorcycle">
-                </div> <!--end first img-->
-                <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">yamaha xtz-660 tenere</p>
-                    <p class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadMotorcyclesP1">
-                        The Yamaha XTZ 660 Tenere touring enduro model appeared in 1991, replacing the obsolete Yamaha
-                        XT600Z Tenere. The Yamaha XTZ 660 Tenere was based on a 1-cylinder liquid-cooled 660 cc engine.
-                        see, delivering 48 hp. Other features of the Yamaha XTZ660 Tenere include a steel frame,
-                        advanced long-travel suspension in the form of a 43 mm telescopic fork and an adjustable
-                        (preload + rebound) monoshock, disc brakes front and rear, a 20-liter fuel tank and only 195 kg
-                        of curb weight.
-                    </p>
-                </div>
-            </div><!--end first two contents-->
-            <!-- second two contents-->
-            <div class="d-flex flex-column flex-lg-row">
-                <!-- second img-->
-                <div class="col-lg-8 align-self-center text-center mb-5">
-                    <img class="rectangle text-center w-75 " src="assets/img/Of-road/motorcycle-2.jpg"
-                         alt="motorcycle">
-                </div> <!--end second img-->
-                <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">yamaha xt-600</p>
-                    <p class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadMotorcyclesP2">
-                        Without a doubt, this is one of the most versatile motorcycles ever made. It is durable. It
-                        looks great. The XT600 is powered by a reliable air-cooled, 4-stroke 595cc engine. The 4-valve
-                        system and the clever YDIS carburetor block give the bike high torque and smooth, powerful
-                        acceleration in any frequency range, which gives it an advantage both on and off the road. The
-                        electric starter allows the motorcycle to be started at the push of a button. The robust front
-                        suspension includes all dimension changes made in 1996 to improve the stability of the
-                        motorcycle when traveling at high speed.
+  <section class="pb-5">
+    <div class="mxW-1400 wz-90 mx-auto pt-2">
+      <h4
+        class="subtitle text-center my-5"
+        lang-key="offRoadMotorcycles"
+      >off-road motorcycles</h4>
 
-                    </p>
-                </div>
-            </div><!--end second two contents-->
-            <!-- third two contents-->
-            <div class="d-flex flex-column flex-lg-row">
-                <!-- third img-->
-                <div class="col-lg-8 align-self-center text-center mb-5">
-                    <img class="rectangle text-center w-75 " src="assets/img/Of-road/motorcycle-3.jpg"
-                         alt="motorcycle">
-                </div> <!--end third img-->
-                <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoNAme">yamaha xtz-660 tenere </p>
-                    <p class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadMotorcyclesP1">
-                        The Yamaha XTZ 660 Tenere touring enduro model appeared in 1991, replacing the obsolete Yamaha
-                        XT600Z Tenere. The Yamaha XTZ 660 Tenere was based on a 1-cylinder liquid-cooled 660 cc engine.
-                        see, delivering 48 hp. Other features of the Yamaha XTZ660 Tenere include a steel frame,
-                        advanced long-travel suspension in the form of a 43 mm telescopic fork and an adjustable
-                        (preload + rebound) monoshock, disc brakes front and rear, a 20-liter fuel tank and only 195 kg
-                        of curb weight.
-                    </p>
-                </div>
-            </div><!--end third two contents-->
-            <!-- fourth two contents-->
-            <div class="d-flex flex-column flex-lg-row">
-                <!-- fourth img-->
-                <div class="col-lg-8 align-self-center text-center mb-5">
-                    <img class="rectangle text-center w-75 " src="assets/img/Of-road/motorcycle-4.jpg"
-                         alt="motorcycle">
-                </div> <!--end fourth img-->
-                <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">yamaha xt-600</p>
-                    <p class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadMotorcyclesP2">
-                        Without a doubt, this is one of the most versatile motorcycles ever made. It is durable. It
-                        looks great. The XT600 is powered by a reliable air-cooled, 4-stroke 595cc engine. The 4-valve
-                        system and the clever YDIS carburetor block give the bike high torque and smooth, powerful
-                        acceleration in any frequency range, which gives it an advantage both on and off the road. The
-                        electric starter allows the motorcycle to be started at the push of a button. The robust front
-                        suspension includes all dimension changes made in 1996 to improve the stability of the
-                        motorcycle when traveling at high speed.
-                    </p>
-                </div>
-            </div><!--end fourth two contents-->
-            <!-- fifth two contents-->
-            <div class="d-flex flex-column flex-lg-row">
-                <!-- fifth img-->
-                <div class="col-lg-8 align-self-center text-center mb-5">
-                    <img class="rectangle text-center w-75 " src="assets/img/Of-road/motorcycle-5.jpg"
-                         alt="motorcycle">
-                </div> <!--end fifth img-->
-                <div class="col-lg-4 align-self-center text-center">
-                    <p class="autoName">yamaha xt-600</p>
-                    <p class="text-start pb-3" style="font-size: 0.8rem" lang-key="offRoadMotorcyclesP2">
-                        Without a doubt, this is one of the most versatile motorcycles ever made. It is durable. It
-                        looks great. The XT600 is powered by a reliable air-cooled, 4-stroke 595cc engine. The 4-valve
-                        system and the clever YDIS carburetor block give the bike high torque and smooth, powerful
-                        acceleration in any frequency range, which gives it an advantage both on and off the road. The
-                        electric starter allows the motorcycle to be started at the push of a button. The robust front
-                        suspension includes all dimension changes made in 1996 to improve the stability of the
-                        motorcycle when traveling at high speed.
-                    </p>
-                </div>
-            </div><!--end fifth two contents-->
-        </div>
-    </section>
+      {{#if motorcycles.length}}
+        {{#each motorcycles}}
+          <div class="d-flex flex-column flex-lg-row">
+
+            <div class="col-lg-8 align-self-center text-center mb-5">
+              <img
+                class="rectangle text-center w-75"
+                src="assets/img/{{checkString
+                  loadedImage
+                  'of-road/motocycle.png'
+                }}"
+                alt="motorcycle"
+								style="border-radius: 40px;"
+              />
+            </div>
+
+            <div class="col-lg-4 align-self-center text-center">
+              <p class="autoName">{{changeLang motorcycleName}}</p>
+              <pre
+                class="text-start pb-3 fw-bold"
+                style="font-size: 0.8rem; white-space: pre-line;"
+              >
+                {{changeLang motorcycleDescription}}
+              </pre>
+            </div>
+          </div>
+
+        {{/each}}
+      {{else}}
+        <h6>Мотоциклов нет.</h6>
+      {{/if}}
+
+    </div>
+  </section>
 </main>
