--- a/views/pages/tours/bartang.hbs
+++ b/views/pages/tours/bartang.hbs
@@ -1,7 +1,7 @@
 <main id="bartang" class="tour">
   <header  class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="mxW-1400 wz-90 mx-auto">
-			<h1 class="headline" lang-key="bartangTour">BARTANG TOUR 2022</h1>
+			<h1 class="headline"><span lang-key="bartangTour">BARTANG TOUR</span> {{nowYear}}</h1>
 			<p class="subtitle" lang-key="bartangTourP1">A difficult tour in the centre of the Pamirs. Part of the tour is the same as the Pamir tour, but technically it is much more difficult. The tour takes place in high mountains and difficulties. We are compensated for by very secluded and unspoiled areas, breathtaking mountains and rivers.</p>
 		</div>
   </header>
