--- a/views/pages/tours/kyrgyz-mongol.hbs
+++ b/views/pages/tours/kyrgyz-mongol.hbs
@@ -1,7 +1,7 @@
 <main id="mongolia" class="tour">
     <header class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
         <div class="mxW-1400 wz-90 mx-auto">
-            <h1 class="headline" lang-key="mongoliaTour">MONGOLIA tour 2022</h1>
+            <h1 class="headline"><span lang-key="mongoliaTour">MONGOLIA tour</span> {{nowYear}}</h1>
             <p class="subtitle" lang-key="mongoliaTourP1">We drive to Tenerife via Mongelli. We get to know a huge
                 country, impressive rivers and lakes, endless expanses.</p>
         </div>
