--- a/views/pages/tours/pamir.hbs
+++ b/views/pages/tours/pamir.hbs
@@ -1,7 +1,7 @@
 <main id="pamir" class="tour">
   <header  class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="mxW-1400 wz-90 mx-auto">
-			<h1 class="headline" lang-key="pamirTour">PAMIR TOUR <br>(MAY / JUNE 2022)</h1>
+			<h1 class="headline"><span lang-key="pamirTour">PAMIR TOUR MAY / JUNE</span> {{nowYear}}</h1>
 			<p class="subtitle" lang-key="pamirTourP1">A very varied tour of the lowlands, river valleys and high mountains (including 1 week at an altitude of 4000 m). Riding in deserted places in the high mountains.</p>
 		</div>
   </header>
