--- a/views/pages/tours/silk-way.hbs
+++ b/views/pages/tours/silk-way.hbs
@@ -1,9 +1,9 @@
 <main id="silk-way" class="tour">
     <header class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
         <div class="mxW-1400 wz-90 mx-auto">
-            <h1 class="headline" lang-key="silkRoadTour">SILK ROAD TOUR <br> (MAY 2022)</h1>
+            <h1 class="headline"><span lang-key="silkRoadTour">SILK ROAD TOUR MAY </span> {{nowYear}}</h1>
             <p class="subtitle" lang-key="silkRoadTourP1">
-                From Switzerland to Kyrgyzstan by motorcycle. Along the Silk Road.
+                From Switzerland to Kyrgyzstan by motorcycle. Along the Silk Road.
                 Ride your own motorcycle (organized return transport with a freight forwarder) or a Yamaha XT660Z with
                 us.
                 The reserve motorcycle (in case of a breakdown) is transported in a pickup truck along with the luggage
