--- a/views/pages/tours/tian-shan.hbs
+++ b/views/pages/tours/tian-shan.hbs
@@ -1,7 +1,7 @@
 <main id="tian-shan" class="tour">
   <header  class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="mxW-1400 wz-90 mx-auto">
-			<h1 class="headline" lang-key="tienShanTour">TIEN-SHAN TOUR <br>(JUNE 2022)</h1>
+			<h1 class="headline" ><span lang-key="tienShanTour">TIEN-SHAN TOUR JUNE</span> {{nowYear}}</h1>
 			<p class="subtitle" lang-key="tienShanTourP1">Discover the most beautiful regions of Kyrgyzstan by motorcycle in two weeks.</p>
 		</div>
   </header>
