--- a/views/pages/tours/tosor.hbs
+++ b/views/pages/tours/tosor.hbs
@@ -1,7 +1,7 @@
 <main id="tosor" class="tour">
   <header  class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
 		<div class="mxW-1400 wz-90 mx-auto">
-			<h1 class="headline" lang-key="tosorTour">TOSOR TOUR <br>(AUGUST 2022)</h1>
+			<h1 class="headline" ><span lang-key="tosorTour">TOSOR TOUR AUGUST</span> {{nowYear}}</h1>
 			<p class="subtitle" lang-key="tosorTourP1">Discover the most beautiful regions of Kyrgyzstan by motorcycle in two weeks. With trips through difficult terrain.</p>
 		</div>
   </header>
