--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -9,12 +9,6 @@
             <a href="/about-tajikistan" lang-key="aboutTajikistan">About Tajikistan</a>
             <a href="/about-mongolia" lang-key="aboutMongolia">About Mongolia</a>
             <a href="/about-china" lang-key="aboutChina">About CHINA</a>
-
-            <div class="mt-3 address">
-                <p class="mb-0" lang-key="phone">Phone: +996555550146</p>
-                <p class="mb-0" lang-key="addressOshKyrgyzstan">address: osh,kyrgyzstan</p>
-                <p class="mb-0" lang-key="index">index: 723500</p>
-            </div>
         </div>
 
         <div class="col-lg-3 col-sm-6 d-flex flex-column mt-3 footer-links ">
@@ -54,6 +48,6 @@
     </div>
 
     <div class="copyright text-center">
-        <p class="p-3 m-0" lang-key="allRightsReserved">Copyright© 2021 Nte All Rights Reserved.</p>
+        <p class="p-3 m-0">Copyright© 2021 - {{nowYear}} <span lang-key="allRightsReserved">Nte All Rights Reserved</span></p>
     </div>
 </footer>
