--- a/views/pages/aboutUs.hbs
+++ b/views/pages/aboutUs.hbs
@@ -1,63 +1,64 @@
 <main id="about-us" class="text-center mb-5">
-    <header class="text-light d-flex flex-column justify-content-center">
-        <h1 class="headline h1Media" lang-key="aboutUs">About us</h1>
-        <h2 class="subtitle h2Media" lang-key="natureTravelAndEngineering">Nature travel and engineering</h2>
-    </header>
+  <header class="text-light d-flex flex-column justify-content-center">
+    <h1 class="headline h1Media" lang-key="aboutUs">About us</h1>
+    <h2 class="subtitle h2Media" lang-key="natureTravelAndEngineering">Nature
+      travel and engineering</h2>
+  </header>
 
-    <section class="description wz-90 mx-auto">
-        <h3 class="subtitle mb-4" lang-key="travelDescription">Travel description</h3>
-        <p class="content m-0" lang-key="aboutUsP1">
-            Company nature travel and engineering have over 20 years of experience in the marketplace. We are providing
-            reliable, safe, quality service. The only place where you can fix or upgrade your motorcycle, car, any kind
-            of vehicle, trusting the best mechanics in the field. Also, you can easily rent a car or motorcycle.
-        </p>
-        <p class="content" lang-key="aboutUsP2">We cooperate with Swiss tourist company Alatoo-Moto which provides an amazing, adventure
-            tours over Middle
-            Asia</p>
-        <p class="content fw-bold ps-3 mb-0" lang-key="aboutUsP3">Our target</p>
-        <ul class="content targets text-center pe-4">
-            <li lang-key="aboutUsP4">Create comfort</li>
-            <li lang-key="aboutUsP5">Give an unforgettable feeling</li>
-            <li lang-key="aboutUsP6">Ensure safety</li>
-            <li lang-key="aboutUsP7">To make you feel the whole nature of Kyrgyzstan</li>
-            <li lang-key="aboutUsP8">Reach worthy heights</li>
-        </ul>
-    </section>
+  <section class="description wz-90 mx-auto">
+    <h3 class="subtitle mb-4" lang-key="travelDescription">Travel description</h3>
+    <p class="content m-0" lang-key="aboutUsP1">
+      Company nature travel and engineering have over 20 years of experience in
+      the marketplace. We are providing reliable, safe, quality service. The
+      only place where you can fix or upgrade your motorcycle, car, any kind of
+      vehicle, trusting the best mechanics in the field. Also, you can easily
+      rent a car or motorcycle.
+    </p>
+    <p class="content" lang-key="aboutUsP2">We cooperate with Swiss tourist
+      company Alatoo-Moto which provides an amazing, adventure tours over Middle
+      Asia</p>
+    <p class="content fw-bold ps-3 mb-0" lang-key="aboutUsP3">Our target</p>
+    <ul class="content targets pe-4" style="text-align: left;">
+      <li lang-key="aboutUsP4">Create comfort</li>
+      <li lang-key="aboutUsP5">Give an unforgettable feeling</li>
+      <li lang-key="aboutUsP6">Ensure safety</li>
+      <li lang-key="aboutUsP7">To make you feel the whole nature of Kyrgyzstan</li>
+      <li lang-key="aboutUsP8">Reach worthy heights</li>
+    </ul>
+  </section>
 
-    <section class="mxW-1400 wz-90 mx-auto">
-        <h3 class="subtitle h3Media" lang-key="ourTeam">our team</h3>
-        <div class="d-flex flex-column flex-lg-row pt-4 justify-content-between">
-            <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
-                <img class="ellipse text-center w-75 " src="assets/img/About-us/Ellipse-5.jpg"
-                     alt="avatar">
-                <p lang-key="aboutUsP9">Shohruh </p>
-                <p lang-key="aboutUsP10">(Manager)</p>
-            </div>
-            <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
-                <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-6.jpg"
-                     alt="avatar">
-                <p lang-key="aboutUsP11">Kamil</p>
-                <p lang-key="aboutUsP12">(Mechanic)</p>
-            </div>
-            <div class="avatar col-lg-3 align-self-center text-center mb-5 mb-lg-0">
-                <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-7.jpg"
-                     alt="avatar">
-                <p lang-key="aboutUsP13">Kolya</p>
-                <p lang-key="aboutUsP14">(mechanic)</p>
-            </div>
-            <div class="avatar col-lg-3 align-self-center text-center">
-                <img class="ellipse text-center w-75" src="assets/img/About-us/Ellipse-8.jpg"
-                     alt="avatar">
-                <p lang-key="aboutUsP15">Nafisa</p>
-                <p lang-key="aboutUsP16">(chief accountant)</p>
-            </div>
+  <section class="mxW-1400 wz-90 mx-auto">
+    <h3 class="subtitle h3Media" lang-key="ourTeam">our team</h3>
+    <div class="d-flex flex-column flex-lg-row pt-4 justify-content-between flex-wrap">
 
-        </div>
+			{{#if emploees.length}}
+				{{#each emploees}}
+					<div class="avatar col-lg-3 align-self-center text-center mb-5">
+						<img
+							class="ellipse text-center w-75 rounded-circle"
+							src="assets/img/{{checkString loadedImage "About-us/Avatar.png" }}"
+							alt="avatar"
+              style="max-width: 255px;"
+						/>
+						<p class="employeeName">{{changeLang employeeName}}</p>
+        		<p>({{changeLang employeePosition}})</p>
+					</div>
+				{{/each}}
+			{{else}}
+				<h6>Сотрудников нет.</h6>
+			{{/if}}
 
-    </section>
+    </div>
 
-    <section class="mxW-1400 wz-90 mx-auto map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1516.858028188588!2d72.83036884860478!3d40.5036614986653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bdae5eeedb3821%3A0x32098a58403b8c91!2sMuzToo%20Central%20Asia%20Travel%20Company!5e0!3m2!1sen!2skg!4v1627907360437!5m2!1sen!2skg"
-                height="350" style="border:0; width: 100%" allowfullscreen="" loading="lazy"></iframe>
-    </section>
+  </section>
+
+  <section class="mxW-1400 wz-90 mx-auto map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1516.858028188588!2d72.83036884860478!3d40.5036614986653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bdae5eeedb3821%3A0x32098a58403b8c91!2sMuzToo%20Central%20Asia%20Travel%20Company!5e0!3m2!1sen!2skg!4v1627907360437!5m2!1sen!2skg"
+      height="350"
+      style="border:0; width: 100%"
+      allowfullscreen=""
+      loading="lazy"
+    ></iframe>
+  </section>
 </main>
