--- a/views/pages/tours/naryn.hbs
+++ b/views/pages/tours/naryn.hbs
@@ -1,7 +1,7 @@
 <main id="naryn" class="tour">
     <header class="text-light d-flex flex-column justify-content-end justify-content-lg-center">
         <div class="mxW-1400 wz-90 mx-auto">
-            <h1 class="headline" lang-key="narynTour">NARYN TOUR <br>(AUGUST 2022)</h1>
+            <h1 class="headline"><span lang-key="narynTour">NARYN TOUR JULY</span> {{nowYear}}</h1>
             <p class="subtitle" lang-key="narynTourP1">Drive through some of the most beautiful regions of Kyrgyzstan on
                 a motorcycle in one week.</p>
         </div>
